[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-role-wrapper"
version = "0.1.0"
description = "Wrapper around ansible-playbook to run standalone roles from collections"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "sh",
]

[tool.setuptools]
script-files = ["ansible-role"]
